--- a/notes/004-01-递归-树-分治.md
+++ b/notes/004-01-递归-树-分治.md
@@ -42,3 +42,16 @@ void recursion(int level, int param){
 + [98-验证二叉搜索树](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0098-validate-binary-search-tree-%E9%AA%8C%E8%AF%81%E4%BA%8C%E5%8F%89%E6%90%9C%E7%B4%A2%E6%A0%91.md)
 + [104-二叉树的最大深度](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0104-maximum-depth-of-binary-tree-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E6%9C%80%E5%A4%A7%E6%B7%B1%E5%BA%A6.md)
 + [111-二叉树的最小深度](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0111-minimum-depth-of-binary-tree-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E6%9C%80%E5%B0%8F%E6%B7%B1%E5%BA%A6.md)
+
+## 分治
+### 介绍
++ 分治：即“分而治之”
++ 就是把原问题划分成若干个同类子问题，分别解决后，再把结果合并起来
++ 关键点
+  + 原问题和子问题都是重复的（同类的）--- 递归定义
+  + 除了向下递归“问题”，还要向上合并“结果”， split + merge
++ 分治一般用递归实现
+  + 递归是一种程序的实现方式，分治是一种算法
+
+### 实战题目
++ []
