--- a/notes/004-01-递归-树-分治.md
+++ b/notes/004-01-递归-树-分治.md
@@ -52,6 +52,12 @@ void recursion(int level, int param){
   + 除了向下递归“问题”，还要向上合并“结果”， split + merge
 + 分治一般用递归实现
   + 递归是一种程序的实现方式，分治是一种算法
++ 分治划分
+ 
 
 ### 实战题目
-+ []
++ [50-pow(x,n)](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0050-powx-n.md)
++ [22-括号生成]()
+
+  + 除了向下递归“问题”，还要向上合并“结果”， split + merge生成
+  + 除了向下递归“问题”，还要向上合并“结果”， split + merge
