--- a/notes/004-01-递归-树-分治.md
+++ b/notes/004-01-递归-树-分治.md
@@ -57,7 +57,8 @@ void recursion(int level, int param){
 
 ### 实战题目
 + [50-pow(x,n)](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0050-powx-n.md)
-+ [22-括号生成](https://leetcode.com/problems/generate-parentheses/)
-+ [23-合并k个升序链表](vhttps://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0023-merge-k-sorted-lists-%E5%90%88%E5%B9%B6k%E4%B8%AA%E5%8D%87%E5%BA%8F%E9%93%BE%E8%A1%A8.md)
++ [22-括号生成](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0022-generate-parentheses-%E6%8B%AC%E5%8F%B7%E7%94%9F%E6%88%90.md)
++ [23-合并k个升序链表](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0023-merge-k-sorted-lists-%E5%90%88%E5%B9%B6k%E4%B8%AA%E5%8D%87%E5%BA%8F%E9%93%BE%E8%A1%A8.md)
++ 
 
   
