--- a/notes/007-二叉堆-二叉搜索树.md
+++ b/notes/007-二叉堆-二叉搜索树.md
@@ -1,1 +1,2 @@
-
+[0295-find-median-from-data-stream-数据流的中位数](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0295-find-median-from-data-stream-%E6%95%B0%E6%8D%AE%E6%B5%81%E7%9A%84%E4%B8%AD%E4%BD%8D%E6%95%B0.md)
+[0355-design-twitter-设计推特.md](https://github.com/ArielLv2019/leetcode_2021_problem/blob/main/0355-design-twitter-%E8%AE%BE%E8%AE%A1%E6%8E%A8%E7%89%B9.md)
